kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-socks-shop
  labels:
    name: front-end
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
   tls:
   - hosts:
     - socks-shop.35.223.243.232.nip.io
     secretName: socks-shop.35.223.243.232.nip.io
   rules:
   - host: socks-shop.35.223.243.232.nip.io
     http:
       paths:
       - path: /
         backend:
           serviceName: front-end
           servicePort: 80
